# lasr

./: Cargo.toml  README.md  codebook.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
src/: ansi.tmTheme  ast_search.rs  config.rs  finder.rs  highlight.rs  input.rs  lib.rs  main.rs  search.rs  tui.rs
src/snapshots/: lasr__tui__tests__empty.snap  lasr__tui__tests__replace.snap  lasr__tui__tests__replace_ast.snap  lasr__tui__tests__replace_capture.snap  lasr__tui__tests__search.snap  lasr__tui__tests__search_ast.snap  lasr__tui__tests__search_ignore_case.snap  lasr__tui__tests__search_multiline.snap  lasr__tui__tests__search_results_full.snap
testdata/: file1.txt  main.py  main.rs
testdata/aaa/: aaa2.txt
