[package]
name = "lasr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
nucleo = "0.5.0"
anyhow = "1.0.96"
ratatui = "0.29"
crossterm = { version = "0.28" }
futures = "0.3.31"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xdg = "3.0.0"
syntect = "5.2.0"
serde_json = "1.0.140"
regex = "1.11.1"
crossbeam = "0.8.4"
grep = "0.3.2"
ignore = "0.4.23"

[dev-dependencies]
insta = "1.43.1"
tempfile = "3.20.0"
tracing-test = "0.2.5"
