[package]
name = "lasr"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Live Action Search and Replace"
homepage = "https://github.com/rcorre/lasr"
keywords = ["search", "replace", "cli", "tui"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0.96"
# TODO: Switch back to crates when https://github.com/ratatui/ratatui/pull/2057 is merged.
ratatui = { git = "https://github.com/rcorre/ratatui.git", features = ["serde"] }
crossterm = { version = "0.28" }
futures = "0.3.31"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
crossbeam = "0.8.4"
grep = "0.3.2"
ignore = "0.4.23"
etcetera = "0.10.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
insta = "1.43.1"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
tracing-test = "0.2.5"
