[package]
name = "lasr"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Live Action Search and Replace"
homepage = "https://github.com/rcorre/lasr"
keywords = ["search", "replace", "cli", "tui"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0.96"
ratatui = { version = "0.30.0-beta.0", features = ["serde"] }
crossterm = { version = "0.29", features = ["serde"] }
futures = "0.3.31"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
crossbeam = "0.8.4"
grep = "0.3.2"
ignore = "0.4.23"
etcetera = "0.10.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
ast-grep-core = "0.39.5"
ast-grep-language = "0.39.5"

[dev-dependencies]
insta = { version = "1.43.1", features = ["filters"] }
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
tracing-test = "0.2.5"
